2014-07-17  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-table-private.h: Increased GMIME_FOLD_LEN to 78.

2014-05-24  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part.c (g_mime_part_is_attachment): New function to
	determine if a MIME part is an attachment or not.

	* gmime/gmime-disposition.c (g_mime_content_disposition_is_attachment):
	New function to determine if the Content-Disposition value matches
	"attachment".

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.20

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_scan_content): Improved performance
	by using a SIMD hack when scanning for the end of a line.

2014-02-19  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (message_remove_header): Don't clear the
	mime_part header stream unless we actually remove a header.
	(message_write_to_stream): Only add nwritten to the total if we've
	written a MIME-Version header.

2013-12-29  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-object.c
	(g_mime_object_set_content_disposition_parameter): Unref the
	disposition. Thanks to Mario Theodoridis for this patch.

2013-11-02  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (write_references): Don't write out 2
	spaces between the ':' and the first message-id. Fixes bug
	#711305.

2013-10-19  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.19

2013-09-29  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-message.c (write_references): Custom writer for
	References headers so that individual msgid tokens do not get
	folded. Fixes bug #709031.

2013-09-26  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime.c (g_mime_init): Initialize the mutexes
	earlier. Fixes bug #708818.

2013-09-15  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.18
